--- a/index.html
+++ b/index.html
@@ -174,8 +174,6 @@ Many thanks to my front-end professor, Ivin Rodrigues (https://www.twitch.tv/ivi
                                 <img src="img/t1.png">
                                 <h1>bad-vibes.mp3</h1>
                             </li>
-
-                            </li>
                         </ul>
                     </div>
                 </main>
@@ -199,22 +197,22 @@ Many thanks to my front-end professor, Ivin Rodrigues (https://www.twitch.tv/ivi
             <iframe src="https://stardewvalleywiki.com/Stardew_Valley_Wiki" frameborder="0"></iframe>
 
         </section>
-        <section class="window hidded" id="browser">
+        <!--<section class="window hidded" id="browser">-->
 
-            <header class="window-header" id="browserHeader">
-                <section class="buttons">
-                    <span class="minimize" onclick="maximizeHandler('browser')">
-                        <img src="img/maximize.png" alt="">
-                    </span>
-                    <span class="close" onclick="windowHandler('browser')">
-                        <img src="img/close.png">
-                    </span>
-                </section>
-                <span class="window-name">Bing</span>
-            </header>
-            <iframe src="https://www.bing.com/?cc=br" frameborder="0"></iframe>
+        <!--    <header class="window-header" id="browserHeader">-->
+        <!--        <section class="buttons">-->
+        <!--            <span class="minimize" onclick="maximizeHandler('browser')">-->
+        <!--                <img src="img/maximize.png" alt="">-->
+        <!--            </span>-->
+        <!--            <span class="close" onclick="windowHandler('browser')">-->
+        <!--                <img src="img/close.png">-->
+        <!--            </span>-->
+        <!--        </section>-->
+        <!--        <span class="window-name">Bing</span>-->
+        <!--    </header>-->
+        <!--    <iframe src="https://www.bing.com/?cc=br" frameborder="0"></iframe>-->
 
-        </section>
+        <!--</section>-->
         <section class="window hidded" id="map">
 
             <header class="window-header" id="mapHeader">
@@ -242,7 +240,6 @@ Many thanks to my front-end professor, Ivin Rodrigues (https://www.twitch.tv/ivi
         <section class="subicon">
             <ul class="icons">
 
-
                 <li class="icon">
                     <img src="img/dwarf.png" onclick="windowHandler('computer')">
                     <h1>computer</h1>
@@ -255,10 +252,10 @@ Many thanks to my front-end professor, Ivin Rodrigues (https://www.twitch.tv/ivi
                     <img src="img/files.png" onclick="windowHandler('computer')">
                     <h1>documents</h1>
                 </li>
-                <!-- <li class="icon">
-                    <img src="img/star.png">
-                    <h1>settings</h1>
-                </li> -->
+                <!-- <li class="icon">-->
+                <!--    <img src="img/star.png">-->
+                <!--    <h1>settings</h1>-->
+                <!--</li> -->
                 <li class="icon">
                     <img src="img/trash.png" onclick="windowHandler('trash')">
                     <h1>trash</h1>
@@ -295,7 +292,7 @@ Many thanks to my front-end professor, Ivin Rodrigues (https://www.twitch.tv/ivi
                 </div>
             </section>
             <img src="img/m2.png" onclick="windowHandler('wiki')">
-            <img src="img/m3.png" onclick="windowHandler('browser')">
+            <!--<img src="img/m3.png" onclick="windowHandler('browser')">-->
             <img src="img/m1.png" onclick="windowHandler('map')">
             <a href="steam://run/413150">
                 <img src="img/m4.png">
